# coderefactor

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: codeql-analysis.yml  dependabot.yml  pull_request_template.md  release.yml  stale.yml  tests.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
coderefactor/: __init__.py  main.py
coderefactor/analyzers/: __init__.py  base.py  csharp_analyzer.cs  python_analyzer.py  web_analyzer.py
coderefactor/analyzers/utils/: __init__.py  models.py
coderefactor/cli/: __init__.py  commands.py
coderefactor/fixers/: __init__.py  base.py  csharp_fixer.py  python_fixer.py  web_fixer.py
coderefactor/llm/: __init__.py  claude_api.py  prompts.py
coderefactor/utils/: __init__.py  config.py  logging.py  output.py
coderefactor/web/: __init__.py  app.py  routes.py
coderefactor/web/static/css/: styles.css
coderefactor/web/static/js/: app.js
docs/: architecture.md  installation.md  project_structure.md
requirements/: base.txt  dev.txt  docs.txt  test.txt
tests/: README.md  __init__.py  conftest.py  test_base.py  test_cli.py  test_csharp_analyzer.py  test_csharp_fixer.py  test_integration.py  test_llm.py  test_python_analyzer.py  test_python_fixer.py  test_utils.py  test_web_analyzer.py  test_web_fixer.py  test_web_interface.py
tests/fixtures/csharp/: complex.cs  simple.cs
tests/fixtures/python/: complex.py  simple.py
tests/fixtures/web/: simple.css  simple.html  simple.js
