[metadata]
name = coderefactor
description = Advanced code analysis and refactoring tool
author = CodeRefactor Team
author_email = info@coderefactor.dev
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/username/coderefactor
project_urls =
    Bug Tracker = https://github.com/username/coderefactor/issues
    Documentation = https://coderefactor.readthedocs.io/
    Source Code = https://github.com/username/coderefactor
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

[options.packages.find]
exclude =
    tests
    tests.*
    examples
    docs

[options.entry_points]
console_scripts =
    coderefactor = coderefactor.cli.commands:main

[options.package_data]
coderefactor =
    web/templates/*.html
    web/static/css/*.css
    web/static/js/*.js
    web/static/img/*

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,docs
ignore = E203, W503

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[mypy.plugins.numpy.*]
follow_imports = skip

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
python_classes = Test*
filterwarnings =
    ignore::DeprecationWarning:distutils.*:
    ignore::DeprecationWarning:site.*:
    ignore::DeprecationWarning:importlib.*:
markers =
    integration: marks tests as integration tests (deselect with '-m "not integration"')
    slow: marks tests as slow (deselect with '-m "not slow"')